Mostrar cobertura de codigo

--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
   },
+  "jest":{"coverageReporters": ["text"]},
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --coverage",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
