--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,21 +20,6 @@
         "prettier"
     ],
     "rules": {
-        "react/react-in-jsx-scope": "off",
-        "prettier/prettier": [
-            "error",
-            {
-                "singleQuote": true
-            }
-        ],
-        "react/jsx-filename-extension": [
-            "warn",
-            {
-                "extensions": [
-                    ".js",
-                    ".jsx"
-                ]
-            }
-        ]
+        "react/react-in-jsx-scope": "off","react/jsx-filename-extension":"off"
     }
 }
